external-proxy/svc-proxy-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      name: http
